<resources>
    <string name="playlist_maker" translatable="false">Playlist maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media_library" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share_app" translatable="false">Поделиться приложением</string>
    <string name="write_to_support" translatable="false">Написать в поддержку</string>
    <string name="terms_of_use" translatable="false">Пользовательское соглашение</string>

    <string name="terms_of_use_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_email" translatable="false">yuliya-sycheva19@yandex.ru</string>
    <string name="support_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="share_email" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>

    <string name="image_nirvana_url" translatable="false">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="image_jackson_url" translatable="false">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
    <string name="image_bee_gees_url" translatable="false">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="image_led_zeppelin_url" translatable="false">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="image_guns_n_roses_url" translatable="false">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>

    <string name="track_Smells_Like_Teen_Spirit" translatable="false">Smells Like Teen Spirit</string>
    <string name="track_Billie_Jean" translatable="false">Billie Jean</string>
    <string name="track_Stayin_Alive" translatable="false">Stayin\' Alive</string>
    <string name="track_Whole_Lotta_Love" translatable="false">Whole Lotta Love</string>
    <string name="track_Sweet_Child_O_Mine" translatable="false">Sweet Child O\'Mine</string>

    <string name="artist_Nirvana" translatable="false">Nirvana</string>
    <string name="artist_Michael_Jackson" translatable="false">Michael Jackson</string>
    <string name="artist_Bee_Gees" translatable="false">Bee Gees</string>
    <string name="artist_Led_Zeppelin" translatable="false">Led_Zeppelin</string>
    <string name="artist_Guns_N_Roses" translatable="false">Guns N\' Roses</string>

    <string name="nothing_found" translatable="false">Ничего не нашлось</string>
    <string name="something_went_wrong" translatable="false">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>

</resources>