<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context="com.itproger.playlistmaker.settings.ui.SettingsFragment">

        <TextView
            style="@style/TextMedium22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/panel_header_4dp"
            android:layout_marginLeft="@dimen/panel_header_4dp"
            android:layout_marginRight="@dimen/panel_header_52dp"
            android:paddingLeft="@dimen/padding_12dp"
            android:paddingTop="@dimen/padding_10dp"
            android:paddingBottom="@dimen/padding_12dp"
            android:paddingRight="86sp"
            android:text="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/TextOfSettingsActivityStyle"
        android:text="@string/dark_theme"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="15dp"
        app:thumbTint="?attr/colorSwitchThumbNormal"
        app:trackTint="?attr/colorSecondaryVariant"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextOfSettingsActivityStyle"
            android:text="@string/share_app" />

        <ImageView
            android:id="@+id/share"
            style="@style/IconsOfSettingsActivityStyle"
            android:paddingLeft="@dimen/padding_12dp"
            android:paddingTop="@dimen/icon_padding_top_22dp"
            android:paddingRight="@dimen/padding_16dp"
            android:paddingBottom="@dimen/icon_padding_bottom_21dp"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextOfSettingsActivityStyle"
            android:text="@string/write_to_support" />

        <ImageView
            android:id="@+id/support"
            style="@style/IconsOfSettingsActivityStyle"
            android:paddingLeft="10dp"
            android:paddingTop="@dimen/icon_padding_top_22dp"
            android:paddingRight="14dp"
            android:paddingBottom="20dp"
            android:src="@drawable/group" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextOfSettingsActivityStyle"
            android:text="@string/terms_of_use" />

        <ImageView
            android:id="@+id/termsOfViews"
            style="@style/IconArrowStyle" />
    </FrameLayout>
</LinearLayout>