<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/panel_header_4dp"
        android:layout_marginVertical="@dimen/panel_header_4dp"
        android:layout_marginRight="52dp"
        android:paddingLeft="12sp"
        android:paddingTop="10sp"
        android:paddingRight="62sp"
        android:paddingBottom="12sp"
        android:text="@string/playlist_maker"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/around_button_16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:radius="16dp"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text_size_22sp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/around_button_16dp"
            app:icon="@drawable/light_mode"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding_8dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/around_button_16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/media_library"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text_size_22sp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/around_button_16dp"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding_8dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/around_button_16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text_size_22sp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/around_button_16dp"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding_8dp"
            app:iconTint="@color/black" />

    </LinearLayout>

</LinearLayout>